edit lab team time

--- a/lab/04_lab_team_time_prep_deliverables.md.erb
+++ b/lab/04_lab_team_time_prep_deliverables.md.erb
@@ -2,10 +2,18 @@
 title: Team Time - preparing the dossier
 css_class: bold
 ---
+
 <%= homework_hdr %>
+
 * Continue work on PA3!
 * If you didn't succeed working through AWDR Chapter 2's programming steps, do so now.
 * Get a head start on Chapter 5
+
+#### Comments about team work
+* Several/most teams have an unoffical thought leader
+* But don't wait for him/her to tell you what to do next
+* Push and go around them if they are going too slowly!
+* Remember that your project work is a major part of your grade
 
 #### Goals for Lab today
 * Teams, work on all the bits of the <%= link_to_incubator :or1_deliverables %> or as many as you can
