update product reviewer and lectures 2-2 and 2-3

--- a/incubator/11_product_reviewer_logistics.md.erb
+++ b/incubator/11_product_reviewer_logistics.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Outside Reviewer Logistics
+title: Product Reviewer Logistics
 ---
 #### First Meeting
 
@@ -9,7 +9,7 @@ title: Outside Reviewer Logistics
 ##### Schedule of first meeting
 
 2:00-2:20 meet and greet with the whole class and all five reviewers. Snacks and drinks.
-2:20-3:20 each team meets with their Outside Reviewer
+2:20-3:20 each team meets with their Product Reviewer
 3:20-4:00 get together with everyone again to discuss common themes, learnings, insights, and advice
 
 ##### Preperations
