--- a/incubator/12_or1_deliverables.md.erb
+++ b/incubator/12_or1_deliverables.md.erb
@@ -1,9 +1,9 @@
 ---
-title: Student Deliverables for OR Meeting 1
+title: Student Deliverables for PR Meeting 1
 ---
 #### Logistics
 * Meeting will be on Thursday, Feb 26, during our normal lab time
-* See: <%= link_to_incubator :outside_reviewer_logistics %>
+* See: <%= link_to_incubator :product_reviewer_logistics %>
 
 #### Product Dossier Contents
 * Product 1 pager
