--- a/incubator/10_reviewer.md.erb
+++ b/incubator/10_reviewer.md.erb
@@ -1,10 +1,10 @@
 ---
-title: Outside Reviewer
+title: Product Reviewer
 ---
-Each product team in the incubator will have an outside reviewer. 
+Each product team in the incubator will have an outside "Product Reviewer."" 
 
 #### Logistical details and schedule
-* Can be found here: <%= link_to_incubator :outside_reviewer_logistics %>
+* Can be found here: <%= link_to_incubator :product_reviewer_logistics %>
 
 #### Role of the reviewer
 The teams should be getting the concepts and nuts and bolts of building the product from the class and from their own work. The reviewer's role is simply to get an update at the end of each iteration and give the team their feedback from a practical, outside world perspective. 
