major rework of cribsheets

--- a/lectures/iter2/01_db_design.md.erb
+++ b/lectures/iter2/01_db_design.md.erb
@@ -13,7 +13,7 @@ title: Database Design
 * Product Teams: Using all that background, develop initial schema for your product. Include table names, field or attribute names, and relations or joins. <%= team_deliverable "Detailed initial schema for your product. Any form you want." %>
 
 #### Note
-* For links about Rails that go beyond: <%= link_to_topic :rails_resources %>
+* For links about Rails that go beyond: <%= link_to_cribsheet :rails_resources %>
 
 #### Relational Databases and Object Oriented Software
 * What does an ORM do?
