update lectures 2-2 and 2-3

--- a/lectures/iter2/03_mvc_and_model.md.erb
+++ b/lectures/iter2/03_mvc_and_model.md.erb
@@ -4,7 +4,7 @@ title: MVC and the model
 ##### Homework due for today's class
 * Complete Programming Assignment 3 (<%= link_to_pa :PA3 %>) <%= deliverable "PA3 in github and screencast of you demoing it. Post both links in Piazza as your submission." %>
 * Look at <%= link_to_topic :hw_schema_design %>. <%= deliverable "Create a piazza post with a schema for each of the assignments, in the format suggested." %>
-* Read ADWR Chapter 7, Validation and Unit Testing. <%= nb "Try hard to understand what is going on. You need this." %> Make a recording of you running the rails server and showing that the various pages work (not of your whole coding session.) Notice that you will have to have the previous chapters work working as well. If you are having trouble, please let Amin and/or Pito know and we will get you unstuck. <%= deliverable "A link to your screen recording." %>
+* Read ADWR Chapter 7, Validation and Unit Testing. Try your best to understand what's being covered. Do the code examples and get them to work. And as you go make notes. <%= deliverable "Blog post with short paragraphs describing two things you just did not understand and two things you learned." %>
 
 #### http://www.brandeis.edu/index.html
 
