--- a/lectures/iter2/02_db_implementation.md.erb
+++ b/lectures/iter2/02_db_implementation.md.erb
@@ -3,7 +3,9 @@ title: Implementing the Database
 css_class: bold
 ---
 <%= homework_hdr %>
-* Read Chapters 5 and 6 of AWDR. It is important that you really try and execute all the code snippets there and get them to work. Notice that "rails new depot" creates a directory called "depot" from whereever you are. So cd to your /mydev and to rails new depot from there. Follow along and do all the code in Chaoter 6, prove to yourself that it runs. <%= nb "Try hard to understand what is going on. You need this." %> Make a screencast of the results of your work. No need to record your whole coding session just you showing the different pages. <%= deliverable "Screencast of you demonstrating the pages and what you got to from those two chapters." %>
+* Read Chapters 5 and 6 of AWDR. It is important that you really try and execute all the code snippets there and get them to work. Notice that "rails new depot" creates a directory called "depot" from whereever you are. So cd to your /mydev and to rails new depot from there. Follow along and do all the code in Chapter 6, prove to yourself that it runs. Write down two things you just don't understand. <%= nb "Try hard to understand what is going on. You need this." %> Make a screencast of the results of your work. No need to record your whole coding session just you showing the different pages. 
+	* <%= deliverable "Post a link Screencast of you demonstrating the pages and what you got to from those two chapters." %>
+	* **Optional Deliverable** Describe two things you saw that you just did not understand.
 * Work on Programming Assignment 3. Post latest to github. (See <%= link_to_pa :PA3 %>)
 
 #### Models and Databases
