update reviewer intro

--- a/incubator/10_reviewer.md.erb
+++ b/incubator/10_reviewer.md.erb
@@ -17,19 +17,22 @@ The teams should be getting the concepts and nuts and bolts of building the prod
 #### Time Commitment
 I estimate that you (the reviewer) will need to spend about 4 hours total over the next 2.5 months. Here are the approximate guidelines.
 
-* **Team Prep**: (Iter 1: Late Jan/Early Feb) Team prepares a Google Drive "Dossier" about their product. The Dossier will be maintained over the duration of the project. (Reviewer time: 0 hours)
-* **Face to Face Meeting** (Iter 2: Early Feb) Team + reviewer have a face to face kick-off meeting, at the reviewers convenience. The objective of the meeting will be to have everyone meet each other, and to set a baseline. The meeting will have a specific agenda. (Reviewer time: 2 hours)
-* **Phone or Skype meeting** (Iter 3: Early Mar) The team prepares a status update email, and any updates to the dossier. This update is the basis for a skype update meeting. (Reviewer time: 1 hour)
-* **Phone or Skype meeting**: (Iter 4: Early April) The team prepares a status update email, and any updates to the dossier. This update is the basis for a skype update meeting. (Reviewer time: 1 hour)
+The team will is repsonsible for preparing all the materials and running the meeting. They are in the process of putting together a "Dossier" (see <%= link_to_incubator :or1_deliverables %>) which will be ready for you a few days before the first meeting.
 
-There will be a final Presenetation in the first week of May. Each student team will have 15 minutes to present their product to an invited audience. The reviewer is invited to be an outside expert to help judge the results. 
+* Product Review: Feb 27, Thursday, 2:00pm to 4:00pm at Brandeis (committed)
+* Product Review: April 3. Thursday, 2:00pm to 4:00pm at Brandeis (tentative)
+* Final Showcase: May 1, Thursday, 2:00pm to 4:00pm at Brandeis (tentative)
+
+The Product Review meetings will be the Product Reviewer plus the four team members. It is meant as a working session where the PR reacts, comments and critiques the project status. (Think about the famous [billg reviews](http://www.joelonsoftware.com/items/2006/06/16.html))
+
+The Final Showcase has each of the teams doing a 12 minute presentation plus demo in front of all the PRs. They all get a chance to react to what they see and give an overall assessment. The Brandeis community will be invited but in practice we will probably have no more than 15 people in the audience.
 
 ##### Student and teacher responsibility
 * Prepare a framework of questions and issues to discuss with the reviewer before each meeting
 * Design an appropriate agenda for the meeting, built around the convenience of the reviewer
 * Making sure the reviewer has update materials several days before the call
 
-##### Projects Still Seeking a reviewer
+##### Projects that are already in progress
 * <%= link_to_incubator :vaperater %>
 * <%= link_to_incubator :tradeassistant %>
 * <%= link_to_incubator :whatsgoingon %>
