lecture 2-2 and 2-3, and work on incubator

--- a/incubator/10_reviewer.md.erb
+++ b/incubator/10_reviewer.md.erb
@@ -14,10 +14,9 @@ The teams should be getting the concepts and nuts and bolts of building the prod
 * Pointing out similar products that could serve as models
 * Ideas on issues that team might be hitting.
 
-#### Time Commitment
-I estimate that you (the reviewer) will need to spend about 4 hours total over the next 2.5 months. Here are the approximate guidelines.
+####  Meetings
 
-The team will is repsonsible for preparing all the materials and running the meeting. They are in the process of putting together a "Dossier" (see <%= link_to_incubator :or1_deliverables %>) which will be ready for you a few days before the first meeting.
+The students will is repsonsible for preparing all the materials and running the meeting. They are in the process of putting together a "Dossier" (see <%= link_to_incubator :or1_deliverables %>) which will be ready for you a few days before the first meeting.
 
 * Product Review: Feb 27, Thursday, 2:00pm to 4:00pm at Brandeis (committed)
 * Product Review: April 3. Thursday, 2:00pm to 4:00pm at Brandeis (tentative)
@@ -31,10 +30,3 @@ The Final Showcase has each of the teams doing a 12 minute presentation plus dem
 * Prepare a framework of questions and issues to discuss with the reviewer before each meeting
 * Design an appropriate agenda for the meeting, built around the convenience of the reviewer
 * Making sure the reviewer has update materials several days before the call
-
-##### Projects that are already in progress
-* <%= link_to_incubator :vaperater %>
-* <%= link_to_incubator :tradeassistant %>
-* <%= link_to_incubator :whatsgoingon %>
-* <%= link_to_incubator :caltask %>
-* <%= link_to_incubator :affective_tutor %>
