--- a/incubator/11_product_reviewer_logistics.md.erb
+++ b/incubator/11_product_reviewer_logistics.md.erb
@@ -1,6 +1,14 @@
 ---
 title: Product Reviewer Logistics
 ---
+#### Panel Members and Product pairups
+
+1. [Win Treese](http://www.linkedin.com/in/wintreese) is an experienced technologist for distributed systems, networks, high-performance computing, clusters, and security. Win will be working with <%= link_to_incubator :tradeassistant %>
+1. [Andy Dennie](http://www.linkedin.com/in/andydennie)'s background spans 25+ years of experience in the software industry, in roles ranging from individual contributor to VP of Dev/QA at companies of all sizes. Andy will be working with <%= link_to_incubator :caltask %>
+1. [Chris Quirk](http://www.linkedin.com/profile/view?id=1588804) is CTO of the Achievement Network and has led, built and managed successful teams. Expert in agile software development methodologies, communication skills and team building. Chris will be working with <%= link_to_incubator :whatsgoingon %>
+1. [Nick Marden](http://www.linkedin.com/pub/nick-marden/0/326/591) has designed, built, and maintaiend complex distributed systems. His specialties: Development at all levels of the application stack, systems engineering, deployment frameworks, database development and administration. Nick will be working with <%= link_to_incubator :affective_tutor %>
+1. [Will Koffel](http://www.linkedin.com/in/wkoffel) is a technologist specializing in development and management of internet and web applications. His specialties are web Technologies, High-Capacity web architectures, Early-stage development teams. Mobile Applications. Will will be working with <%= link_to_incubator :vaperater %>
+
 #### First Meeting
 
 * When: February 27, 2:00 to 4:00pm
@@ -8,10 +16,14 @@ title: Product Reviewer Logistics
 
 ##### Schedule of first meeting
 
-2:00-2:20 meet and greet with the whole class and all five reviewers. Snacks and drinks.
-2:20-3:20 each team meets with their Product Reviewer
-3:20-4:00 get together with everyone again to discuss common themes, learnings, insights, and advice
+* 2:00-2:20 meet and greet with the whole class and all five reviewers. Snacks and drinks.
+* 2:20-3:20 each team meets with their Product Reviewer
+* 3:20-4:00 get together with everyone again to discuss common themes, learnings, insights, and advice
 
 ##### Preperations
 
-Each team will prepare an online dossier that you will receive several days before the meeting. The dossier will have a specific set of materials prepared by the team. I will work out the BOM (!) in the next few days. 
+Each team will prepare an online dossier that you will receive several days before the meeting. The dossier will have a specific set of materials prepared by the team.
+
+* <%= link_to_incubator :or1_deliverables %>
+
+
