--- a/lectures/iter2/03_mvc_and_model.md.erb
+++ b/lectures/iter2/03_mvc_and_model.md.erb
@@ -1,13 +1,17 @@
 ---
 title: MVC and the model
+css_class: bold
 ---
 ##### Homework due for today's class
 * Complete Programming Assignment 3 (<%= link_to_pa :PA3 %>) <%= deliverable "PA3 in github and screencast of you demoing it. Post both links in Piazza as your submission." %>
 * Look at <%= link_to_topic :hw_schema_design %>. <%= deliverable "Create a piazza post with a schema for each of the assignments, in the format suggested." %>
 * Read ADWR Chapter 7, Validation and Unit Testing. Try your best to understand what's being covered. Do the code examples and get them to work. And as you go make notes. <%= deliverable "Blog post with short paragraphs describing two things you just did not understand and two things you learned." %>
 
+#### Review
+* <%= link_to_topic :rails_db_models %>
+* <%= link_to_topic :mvc_review %>
 
-<%= include_topic :mvc_review %>
+<%= include_topic :url_rails %>
 
 
 
