extended mvc and models into two lectures

--- a/incubator/12_or1_deliverables.md.erb
+++ b/incubator/12_or1_deliverables.md.erb
@@ -5,11 +5,18 @@ title: Student Deliverables for PR Meeting 1
 * Meeting will be on Thursday, Feb 26, during our normal lab time
 * See: <%= link_to_incubator :product_reviewer_logistics %>
 
-#### Product Dossier Contents
-* Product 1 pager
+#### Product Dossier
+* The product dossier is a single, top level Google Drive Folder, with individual items for the following. Some items will be google docs, others will be links to github, other might be other kinds of documents.
+* The section below gives a list of all the bits of content that are required. Depending on the team, you may have other things that you consider important. Feel free to add them.
+* By the time the first meeting with your Product Reviewer, the dossier needs to be neat and understandable. Consider it a presentation package.
+* You likely will have a separate "work area" for your team for rough notes or other interim documents.
+#### Product Dossier Content
+* Product high level summary
 	* Name of product
 	* One line (twitter length) summary of product
 	* Elevator pitch for product
+* Team Info
+	* Team name
 	* Team members
 		* email and cell phone contact
 		* any special expertise? (e.g. css, sql, performance, whatever)
@@ -23,17 +30,17 @@ title: Student Deliverables for PR Meeting 1
 		* and the Travis.ci badge
 * Final diagram of db schema of product
 	* Make sure someone on the team can explain it and answer any and all questions about it.
+	* Use any format or tool you like
 * Subfolder with Paper Prototype
 	* Include multiple single screens
 	* Include a UX Flow map
 	* While these should *not be* beautiful and fancy, they should be fairly neat and legible!
-* PivotalTracker with an interesting backlog
+* Link to pivotalTracker with an interesting backlog
 	* You should have generated with your team lots of stories of features
 	* Put them in priority order as best you can
 * Meeting agenda
 	* What do you want to present?
 	* What questions and advice you would like from your reviewer?
-
 
 #### Running the meeting
 * Look at this as a "product review meeting" you might have with the CEO or CTO of your company. See also [BillG Review](http://wmworia.wordpress.com/2007/10/22/bill-g-review/)
