--- a/lectures/iter2/06_http.md.erb
+++ b/lectures/iter2/06_http.md.erb
@@ -1,10 +1,19 @@
 ---
-title: Web Services
+title: Hypertext Transfer Protocol
 type: page
 ---
-##### Homework due for today's class
+<%= homework_hdr %>
+
 * Read [Sandy Metz's Rules](http://robots.thoughtbot.com/sandi-metz-rules-for-developers). 
 <%= deliverable "Write a blog post reflecting on them, and whether plan to adopt them rigorously (and why or why not)." %>
+
+##### HTTP
+* High level reviews
+* The HTTP Methods
+* Taking a peek at the controller
+* Review message dispatch in an HTTP server
+* Models, Views, Controller
+##### Homework due for today's class
 
 ##### Web Services
 * The *WEB* as a big operating system
