change grading a little tiny bit

--- a/lectures/iter2/04_product_teams.md.erb
+++ b/lectures/iter2/04_product_teams.md.erb
@@ -1,8 +1,9 @@
 ---
-title: Product Teams, contined
+title: Product Teams, continued
 css_class: bold
 ---
 <%= homework_hdr %>
+
 #### Product work
 * Split into teams and continue working on your products
 
