reorg some lextures and add details to controllers lecture

--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -26,4 +26,5 @@ type: page
 * [User Experience: Stop designing screens and start designing flows](http://uxdesign.smashingmagazine.com/2012/01/04/stop-designing-pages-start-designing-flows/)
  * [Effective use of white space in forms](http://www.nngroup.com/articles/form-design-white-space/)
  * [Laziness, Impatience and Hubris](http://c2.com/cgi/wiki?LazinessImpatienceHubris)
- 
+ * [Rails Routing Guide](http://guides.rubyonrails.org/routing.html)
+* [RESTful Web Services: The Basics](http://www.ibm.com/developerworks/webservices/library/ws-restful/)
