--- a/lectures/iter2/04_product_teams.md.erb
+++ b/lectures/iter2/04_product_teams.md.erb
@@ -3,7 +3,16 @@ title: Product Teams, continued
 css_class: bold
 ---
 <%= homework_hdr %>
+* Prepare with your team to do a standup presentation. Skim [Patterns for Daily Standup Meetings](http://martinfowler.com/articles/itsNotJustStandingUp.html). Choose who on your team will speak.
+* Some people are still behind on the reading and posting for AWDR Chapters 5, 6, 7, which were in HW 8-1 (including "optional deliverable") and HW 9-3. Complete them now please!
+* <%= bold_red "Remember it's valentines day! Don't forget your significant other. Or your mother :)" %>
 
 #### Product work
+* Standups
+	* One member from each team stands up, and takes 5 minutes to state the status of their project
+	* Topics to cover:
+		* What we accomplished so far
+		* What we plan to accomplish next week
+		* Anything blocking our progress?
 * Split into teams and continue working on your products
 
