--- a/lab/05_port_prep_mvc_continued.md.erb
+++ b/lab/05_port_prep_mvc_continued.md.erb
@@ -8,5 +8,7 @@ css_class: bold
 * <%= team_deliverable "2/3 completed Product Dossier, link submitted to Piazza." %>
 
 #### Lab Objectives
+
 * <%= link_to_topic :mvc_review %>
-* <%= include_topic :url_rails %>
+
+<%= include_topic :url_rails %>
