update lecture 2-5 and 2-6

--- a/lectures/iter2/06_controllers.md.erb
+++ b/lectures/iter2/06_controllers.md.erb
@@ -2,6 +2,8 @@
 title: Understanding controllers
 ---
 <%= homework_hdr %>
+* Read AWDR Chapter 18 (Finding your way around Rails) and 19 (Active Record). Keep a notepad handy, and write down several specific things that you still don't understand and several new cool things you learned. <%= deliverable "Piazza post with those two lists." %>
+* Continue working with your team on your product!
 
 #### REST, Resources and Controllers
 * We've had some discussions about designing URLs
