--- a/lectures/iter2/05_tdd.md.erb
+++ b/lectures/iter2/05_tdd.md.erb
@@ -7,7 +7,7 @@ type: page
 * Read [Minitest Quick Reference](http://mattsears.com/articles/2011/12/10/minitest-quick-reference)
 * Read [Rails Testing Pyramid](http://blog.codeclimate.com/blog/2013/10/09/rails-testing-pyramid/)
 * Do the following assignment: <%= link_to_topic :hw_tdd %>. <%= deliverable "Post the link to the repo with all the code in github" %>
-* Complete and tighten up your Product Dossier. Give your reviewer access to it, and send him a link to it. <%= team_deliverable "Post the url to your dossier to Piazza; Email the link to the PM" %>
+* Complete and tighten up your Product Dossier. Incorporate feedback that you have received.<%= team_deliverable "Post the url to your dossier to Piazza." %> *Note:* Once you have incorporated feedback and finalized the dossier, email it to your PR in a proper business email :)
 
 #### Testing
 <%= include_topic :tdd_intro %>
