Add a link to links of interest

--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -28,3 +28,5 @@ type: page
  * [Laziness, Impatience and Hubris](http://c2.com/cgi/wiki?LazinessImpatienceHubris)
  * [Rails Routing Guide](http://guides.rubyonrails.org/routing.html)
 * [RESTful Web Services: The Basics](http://www.ibm.com/developerworks/webservices/library/ws-restful/)
+* [Five Rules for Product Demos](http://blog.launch.co/blog/five-rules-i-learned-from-7-years-of-coaching-launch-festiva.html)
+
