small change to lec 2/5

--- a/lectures/iter2/05_tdd.md.erb
+++ b/lectures/iter2/05_tdd.md.erb
@@ -9,6 +9,9 @@ type: page
 * Do the following assignment: <%= link_to_topic :hw_tdd %>. <%= deliverable "Post the link to the repo with all the code in github" %>
 * Complete and tighten up your Product Dossier. Incorporate feedback that you have received.<%= team_deliverable "Post the url to your dossier to Piazza." %> *Note:* Once you have incorporated feedback and finalized the dossier, email it to your PR in a proper business email :)
 
+#### 3 Minute Survey
+* **Remember**
+
 #### Testing
 <%= include_topic :tdd_intro %>
 
