improve lecture 2/4 and 2/5

--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -24,9 +24,9 @@ type: page
 * [SOLID - Single Responsibility Principle](http://dev.tutsplus.com/tutorials/solid-part-1-the-single-responsibility-principle--net-36074)
 * [How to design a user experience flow chart](http://www.startuprocket.com/blog/how-to-create-a-user-experience-flow-chart-ux-flow-chart)
 * [User Experience: Stop designing screens and start designing flows](http://uxdesign.smashingmagazine.com/2012/01/04/stop-designing-pages-start-designing-flows/)
- * [Effective use of white space in forms](http://www.nngroup.com/articles/form-design-white-space/)
- * [Laziness, Impatience and Hubris](http://c2.com/cgi/wiki?LazinessImpatienceHubris)
- * [Rails Routing Guide](http://guides.rubyonrails.org/routing.html)
+* [Effective use of white space in forms](http://www.nngroup.com/articles/form-design-white-space/)
+* [Laziness, Impatience and Hubris](http://c2.com/cgi/wiki?LazinessImpatienceHubris)
+* [Rails Routing Guide](http://guides.rubyonrails.org/routing.html)
 * [RESTful Web Services: The Basics](http://www.ibm.com/developerworks/webservices/library/ws-restful/)
 * [Five Rules for Product Demos](http://blog.launch.co/blog/five-rules-i-learned-from-7-years-of-coaching-launch-festiva.html)
-
+* [Sandy Metz on Object Oriented Design](http://www.confreaks.com/videos/240-goruco2009-solid-object-oriented-design)
