--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -30,3 +30,4 @@ type: page
 * [RESTful Web Services: The Basics](http://www.ibm.com/developerworks/webservices/library/ws-restful/)
 * [Five Rules for Product Demos](http://blog.launch.co/blog/five-rules-i-learned-from-7-years-of-coaching-launch-festiva.html)
 * [Sandy Metz on Object Oriented Design](http://www.confreaks.com/videos/240-goruco2009-solid-object-oriented-design)
+* [UX Crash Course: 31 Fundamentals](http://thehipperelement.com/post/75476711614/ux-crash-course-31-fundamentals)
