add lecture about authentication

--- a/lectures/iter2/06_controllers.md.erb
+++ b/lectures/iter2/06_controllers.md.erb
@@ -63,6 +63,12 @@ rake db:migrate
     * Controller naming
 * Huge time saver and bug saver!
 
+#### Controller Actions
+* Who calls the controller action?
+* What parameters are supplied automatically by the controller action?
+* Sessions, why they are needed and how they work
+* Why does it take two separate actions to implement "create"?
+
 #### Demo
 * Lets take a look: <%= link_to_topic :controllers_resources %>
 
