add a homework to lecture 3/1

--- a/lectures/iter3/01_authentication.md.erb
+++ b/lectures/iter3/01_authentication.md.erb
@@ -2,7 +2,9 @@
 title: Authentication
 ---
 <%= homework_hdr %>
-* Read: * Reference: [Ruby on Rails Tutorail](http://ruby.railstutorial.org/chapters/modeling-users#book_menu) - Chapters 6,7 and 8
+* Read: * Reference: [Ruby on Rails Tutorail](http://ruby.railstutorial.org/chapters/modeling-users#book_menu) - Chapters 6,7 and 8. <%= deliverable "Keep a notepad nearby. Write down points of things you learned, and points of things you are still confused by."%>
+* Think. This web site is a "static web site." Research what that means. Figure out where this web site is hosted. Explain how you think the logic for the search page is implemented. Where does that algorithm run?" <%= deliverable "Piazza post with a response to those questions."
+
 
 
 #### Introduction
