--- a/lectures/iter2/06_controllers.md.erb
+++ b/lectures/iter2/06_controllers.md.erb
@@ -58,8 +58,9 @@ rake db:migrate
 #### Resources in Rails
 * Automatic wiring of plumbing between urls, routing, models, and controllers
 * Takes advantage of standardized patterns
-    * CRUD operations as actions
     * Nesting model in the URLs
+    * CRUD operations as actions
+    * Path naming (path_to_user instead of "")
     * Controller naming
 * Huge time saver and bug saver!
 
