--- a/lectures/iter3/01_authentication.md.erb
+++ b/lectures/iter3/01_authentication.md.erb
@@ -1,9 +1,10 @@
 ---
 title: Authentication
+css_class: bold
 ---
 <%= homework_hdr %>
 * Read: * Reference: [Ruby on Rails Tutorail](http://ruby.railstutorial.org/chapters/modeling-users#book_menu) - Chapters 6,7 and 8. <%= deliverable "Keep a notepad nearby. Write down points of things you learned, and points of things you are still confused by."%>
-* Think. This web site is a "static web site." Research what that means. Figure out where this web site is hosted. Explain how you think the logic for the search page is implemented. Where does that algorithm run?" <%= deliverable "Piazza post with a response to those questions." %>
+* Think. The course web site you are looking at right now  is a "static web site." Research what that means. Figure out where this web site is hosted. Explain how you think the logic for the search page is implemented. Where does that algorithm run?" <%= deliverable "Piazza post with a response to those questions." %>
 * Continuing from the last lecture... Right now, the url "/posts/1/comments/3" gives a "routing error" meaning there is something wrong with the routes.rb. Routes.rb contained these lines:
 <%= code_begin %>
 Resdemo::Application.routes.draw do
