update lecture 3-2 and lab-7

--- a/lab/07_team_work_time.md.erb
+++ b/lab/07_team_work_time.md.erb
@@ -3,6 +3,7 @@ title: Team Work Time
 css_class: bold
 ---
 <%= homework_hdr %>
+* For each product, implement (or adapt) a User model: registration, login and logout. I recommend (strongly) that you follow the pattern that is laid out in [Ruby on Rails Tutorail](http://ruby.railstutorial.org/chapters/modeling-users#book_menu) - Chapters 6,7 and 8. <%= team_deliverable "Implement simple authentication for your product. Update your project's git repo with the new code." %>
 * <%= team_deliverable "Prepare a demo of what you have working so far." %>
 * From now till the end of the course, each Thursday, BEFORE LAB, each team posts their status. At least one sentence per member with what they completed this week, what they plan to complete in the coming week, and if there are any obstacles.
 * <%= team_deliverable "First weekly status update post." %>
