--- a/lectures/iter3/02_auth_and_projectplan.md.erb
+++ b/lectures/iter3/02_auth_and_projectplan.md.erb
@@ -2,7 +2,7 @@
 title: Authentication Continued, Project Plan
 ---
 <%= homework_hdr %>
-* For each product, implement (or adapt) a User model: registration, login and logout. I recommend (strongly) that you follow the pattern that is laid out in [Ruby on Rails Tutorail](http://ruby.railstutorial.org/chapters/modeling-users#book_menu) - Chapters 6,7 and 8. <%= team_deliverable "Implement simple authentication for your product. Update your project's git repo with the new code." %>
+* Each product team: design the absolute minimum demo of your product that you want to ahve working by the product showcase. What is the essential coolness of your product? Can you demo that? Remember a perfect login or user settings page is not essential coolness. Think of the aha reaction you want in the viewer. <%= team_deliverable "A detailed paper prototype of the minimum coolness demo (mcd) of your product. Detailed not because it has beautiful colors but because it covers the layout AND interactions that will work." %>
 
 #### Project Planning
 * Laying out a plan to achieve success
