cribsheers 2 and 10 updated, and leture 3-1

--- a/cribsheets/02_rake_commands.md.erb
+++ b/cribsheets/02_rake_commands.md.erb
@@ -4,8 +4,7 @@ css_class: red
 ---
 ##### Getting a list of Rake "tasks"
 * rake -T 				# to get a list of all the more typical rake tasks
-* rake -P \| grep rake # to get every every rake task
-* rake -P \| grep rake # to get every every rake task
+* rake -T -A        # show every single task
 
 #### Primary db related tasks
 * db:migrate runs migrations for the current env that have not run yet
