lecture 3-2, 3-3, and 3-4. Reorg remaining labs

--- a/lab/future/07_team_work_time.md.erb
+++ b/lab/future/07_team_work_time.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Team Work Time
+title: Sprint 1 - Team Work Time
 css_class: bold
 ---
 <%= homework_hdr %>
@@ -11,5 +11,6 @@ css_class: bold
 #### Project Work
 * All teams use the full two hours (minus 20 minutes) to code on their projects.
 * Pito and Amin are available for consultation
-#### Demos
+
+##### Demos
 * Each team takes 5 minutes to summarize progress to date, what the plan is for the coming week, and demonstrate their product so far.
