--- a/lectures/iter3/02_projectplan.md.erb
+++ b/lectures/iter3/02_projectplan.md.erb
@@ -6,8 +6,8 @@ title: Project Planning
 
 #### Project Planning
 * Laying out a plan to achieve success
-* Drop dead date: April 11, week before Spring Recess
-* After that there are 1.5 weeks left before Product Showcase
+* Drop dead date: April 24, week before Product Showcases!
+* Getting from here to there!
 
 ### Narrow your focus!
 * Remember the feedback form your PRs! Take it to heart
@@ -22,7 +22,7 @@ title: Project Planning
 * The last one will end April 24 by which time the MVP is completed.
 * Work back and forward from there to figure out what happens during each of the sprints
 
-#### Chunks of work
+##### Chunks of work
 1. Identify what gems you need and learn them
 1. Database up and running (focus on core views)
 1. User accounts: registration, login, logout, administration
