--- a/lectures/iter3/02_projectplan.md.erb
+++ b/lectures/iter3/02_projectplan.md.erb
@@ -36,4 +36,9 @@ title: Project Planning
 1. Google Maps if needed
 1. Deployment to Heroku
 1. Implement continuous integration and/or deployment
+1. Anything else...?
+
+##### Show-n-tell
+* Each team uses the screen to show off their MVP paper prototype
+* In the remaining time, teams meet to work out what's in each sprint
 
